bug fixes - button alignment + random answer choice

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ div {
 
 
 .button-panel {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .square {
